[gd_scene load_steps=2 format=3 uid="uid://c8bsahsld3plv"]

[ext_resource type="Script" uid="uid://5sy38cikuoay" path="res://Scenes/menu/canvas_layer.gd" id="1_y0kdo"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_y0kdo")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = -0.067
anchor_top = -0.056
anchor_right = -0.067
anchor_bottom = -0.056
offset_left = 84.76
offset_top = 39.32
offset_right = 1361.76
offset_bottom = 753.32

[node name="Título" type="Label" parent="."]
offset_left = -26.0
offset_top = -46.0
offset_right = 1353.0
offset_bottom = 227.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 160
text = "Configurações"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SliderGeral" type="HSlider" parent="."]
offset_left = 213.0
offset_top = 246.0
offset_right = 1117.0
offset_bottom = 373.0
max_value = 0.3
step = 0.01

[node name="LabelGeral" type="Label" parent="."]
offset_left = 370.0
offset_top = 186.0
offset_right = 930.0
offset_bottom = 312.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Volume geral "
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelMusica" type="Label" parent="."]
offset_left = 382.0
offset_top = 319.0
offset_right = 942.0
offset_bottom = 445.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Volume música"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SliderMusica" type="HSlider" parent="."]
offset_left = 216.0
offset_top = 392.0
offset_right = 1120.0
offset_bottom = 519.0
max_value = 0.3
step = 0.01

[node name="LabelEfeitos" type="Label" parent="."]
offset_left = 342.0
offset_top = 452.0
offset_right = 1024.0
offset_bottom = 578.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Volume efeitos sonoros"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SliderEfeitos" type="HSlider" parent="."]
offset_left = 211.0
offset_top = 507.0
offset_right = 1115.0
offset_bottom = 634.0
max_value = 0.3
step = 0.01

[node name="Voltar" type="Button" parent="."]
offset_left = 274.0
offset_top = 619.0
offset_right = 1078.0
offset_bottom = 690.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Voltar ao menu"
